# invariant

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  catalogue-2.0.10-py3-none-any.whl  pyproject.toml  ranges.py  ruff.toml
analyzer/: pyproject.toml
docs/: DEVELOPMENT.md  STDLIB.md
invariant/: .gitignore  (+9 more)
testing/: .gitignore  README.md  pyproject.toml
testing/docs/: README.md
testing/invariant/: __main__.py  config.py  constants.py  explorer.py  formatter.py  manager.py  ruff.toml
testing/invariant/cache/: cache_manager.py
testing/invariant/custom_types/: __init__.py  addresses.py  assertions.py  invariant_bool.py  invariant_dict.py  invariant_image.py  invariant_number.py  invariant_string.py  invariant_value.py  matchers.py  test_result.py  trace.py  trace_factory.py
testing/invariant/scorers/: __init__.py  base.py  code.py  moderation.py  strings.py
testing/invariant/scorers/llm/: classifier.py  detector.py
testing/invariant/scorers/llm/clients/: anthropic_client.py  client.py  open_ai_client.py
testing/invariant/scorers/utils/: base.py  embeddings.py  ocr.py
testing/invariant/testing/: __init__.py  functional.py
testing/invariant/utils/: context.py  explorer.py  logging.py  packages.py  utils.py
testing/invariant/wrappers/: __init__.py  swarm_wrapper.py
testing/sample_tests/: test_agent.py
testing/sample_tests/demos/: chatbot.py  computer_use_agent.py  qa-chatbot.py  web_agent.py
testing/sample_tests/langgraph/.invariant/test_results/results_for_1733226129/: test_weather_agent_with_only_sf.json
testing/sample_tests/langgraph/.invariant/test_results/results_for_1733226134/: test_weather_agent_with_sf_and_nyc.json
testing/sample_tests/langgraph/.invariant/test_results/results_for_1733226226/: test_weather_agent_with_only_sf.json
testing/sample_tests/langgraph/.invariant/test_results/results_for_1733226230/: test_weather_agent_with_sf_and_nyc.json
testing/sample_tests/langgraph/.invariant/test_results/results_for_1733226349/: test_weather_agent_with_only_sf.json
testing/sample_tests/langgraph/.invariant/test_results/results_for_1733226353/: test_weather_agent_with_sf_and_nyc.json
testing/sample_tests/langgraph/.invariant/test_results/results_for_1733226385/: test_weather_agent_with_only_sf.json
testing/sample_tests/langgraph/.invariant/test_results/results_for_1733226388/: test_weather_agent_with_sf_and_nyc.json
testing/sample_tests/langgraph/.invariant/test_results/results_for_1733226417/: test_weather_agent_with_only_sf.json
testing/sample_tests/langgraph/.invariant/test_results/results_for_1733226420/: test_weather_agent_with_sf_and_nyc.json
testing/sample_tests/langgraph/.invariant/test_results/results_for_1733226577/: test_weather_agent_with_only_sf.json
testing/sample_tests/langgraph/.invariant/test_results/results_for_1733226581/: test_weather_agent_with_sf_and_nyc.json
testing/sample_tests/langgraph/.invariant/test_results/results_for_1733226615/: test_weather_agent_with_only_sf.json
testing/sample_tests/langgraph/.invariant/test_results/results_for_1733226618/: test_weather_agent_with_sf_and_nyc.json
testing/sample_tests/langgraph/.invariant/test_results/results_for_1733226726/: test_weather_agent_with_only_sf.json
testing/sample_tests/langgraph/.invariant/test_results/results_for_1733226729/: test_weather_agent_with_sf_and_nyc.json
testing/sample_tests/langgraph/.invariant/test_results/results_for_1733226747/: test_weather_agent_with_only_sf.json
testing/sample_tests/langgraph/.invariant/test_results/results_for_1733226752/: test_weather_agent_with_sf_and_nyc.json
testing/sample_tests/langgraph/.invariant/test_results/results_for_1733226836/: test_weather_agent_with_only_sf.json
testing/sample_tests/langgraph/.invariant/test_results/results_for_1733226842/: test_weather_agent_with_sf_and_nyc.json
testing/sample_tests/langgraph/.invariant/test_results/results_for_1733227215/: test_weather_agent_with_only_sf.json
testing/sample_tests/langgraph/.invariant/test_results/results_for_1733227219/: test_weather_agent_with_sf_and_nyc.json
testing/sample_tests/langgraph/.invariant/test_results/results_for_1733227236/: test_weather_agent_with_only_sf.json
testing/sample_tests/langgraph/weather_agent/: test_weather_agent.py  weather_agent.py
testing/sample_tests/openai/: test_python_agent.py
testing/sample_tests/swarm/capital_finder_agent/: test_capital_finder_agent.py
testing/testing/: manager.py
testing/testing/custom_types/: assertions.py  invariant_dict.py  invariant_image.py  trace_factory.py
testing/testing/scorers/: code.py  moderation.py
testing/testing/scorers/llm/: classifier.py
testing/testing/testing/: __init__.py  functional.py
testing/testing/utils/: explorer.py  utils.py
testing/tests/: test_assertion_args.py  test_code.py  test_contains.py  test_display.py  test_error_propagation.py  test_factuality.py  test_lists.py  test_moderation.py  test_modes.py  test_runner.py  test_selectors.py  test_similar.py  test_strings.py  test_test_naming.py  test_tool_calls.py  test_trace.py  testutils.py
testing/tests/cache/: test_cache_manager.py
testing/tests/custom_types/: test_invariant_bool.py  test_invariant_dict.py  test_invariant_image.py  test_invariant_number.py  test_invariant_string.py  test_invariant_value.py  test_trace.py
(+360 files in other folders)
