[project]
name = "invariant-ai"
version = "0.2.1"
description = "Invariant Testing and Analyzer"
readme = "README.md"
requires-python = ">= 3.10,<4"

[tool.poetry]
packages = [
    { include = "invariant", from = "." }
]

[tool.poetry.dependencies]
python = ">= 3.10, <4.0"
pydantic = ">=2.9.2, <3.0.0"
requests = "^2.32.3"
nltk = "^3.9.1"
openai = "^1.54.4"
Pillow = "^10.0.0"
beautifulsoup4 = "^4.12.3"
invariant-sdk = "^0.0.10"
diskcache = "^5.6.3"
pexpect = "^4.9.0"
lark = ">=1.1.9"
termcolor = ">=2.4.0"
pip = ">=24.0"
semgrep = ">=1.78.0"
pytest = ">=8.2.1"

[tool.poetry.group.dev.dependencies]
pytest-cov = "^5.0.0"
openai-swarm = "^0.1.1"
langgraph = "^0.2.53"
langchain-openai = ">=0.2.10"
langchain-community = "^0.3.9"
anthropic = "^0.40.0"
presidio-analyzer = ">=2.2.354"
spacy = ">=3.7.5"
langchain = ">=0.2.1"
langchainhub = ">=0.1.16"
transformers = ">=4.41.1"
torch = ">=2.3.0"
python-dotenv = ">=1.0.1"
numpy = "1.26.4"

[tool.pytest.ini_options]
log_cli = true
log_cli_level = "INFO"
log_cli_format = "%(asctime)s [%(levelname)s] %(message)s"
log_cli_date_format = "%Y-%m-%d %H:%M:%S"
testpaths = ["invariant/tests"]

[project.scripts]
invariant = "invariant.__main__:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
